# xwmux

./: .gitignore  CMakeLists.txt  README.md  flake.nix
scripts/: init_term.sh  register_terminal.sh  report.sh
src/: CMakeLists.txt
src/scripts/: xwmux-init-term.sh  xwmux-launch-term.sh  xwmux-report.sh  xwmux-tmux-conf.sh
src/xwmux/: instance.cpp  instance.h  ipc.h  layout.h  listen.cpp  listen.h  log.h  main.cpp  tmux.cpp  tmux.h  tmux_keys.h  xwrapper.h
src/xwmux-utils/: xwmux-ctl.cpp  xwmux-win.cpp
